--- a/Calendar/Calendar.Windows/Calendar.Windows.csproj
+++ b/Calendar/Calendar.Windows/Calendar.Windows.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Calendar</RootNamespace>
     <AssemblyName>Calendar.Windows</AssemblyName>
-    <DefaultLanguage>en</DefaultLanguage>
+    <DefaultLanguage>ru</DefaultLanguage>
     <TargetPlatformVersion>8.1</TargetPlatformVersion>
     <MinimumVisualStudioVersion>12</MinimumVisualStudioVersion>
     <FileAlignment>512</FileAlignment>
@@ -138,8 +138,8 @@
     </AppxManifest>
     <None Include="Calendar.Windows_StoreKey.pfx" />
     <None Include="Calendar.Windows_TemporaryKey.pfx" />
-    <None Include="packages.config" />
     <PRIResource Include="Holidays\en\Resources.resw" />
+    <None Include="packages.config" />
     <PRIResource Include="Holidays\uk\Resources.resw" />
     <PRIResource Include="Holidays\ru\Resources.resw" />
   </ItemGroup>
