New Images & colors 1. icons for both apps 2. images of color themes for WP 3. main theme (red) and color 4. gif-image for LoadingPage 5. changes in resource files (strings in Resources.resw and Themes.XML)

--- a/Calendar/Calendar.Windows/Calendar.Windows.csproj
+++ b/Calendar/Calendar.Windows/Calendar.Windows.csproj
@@ -138,6 +138,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Assets\301.gif" />
     <Content Include="Assets\arrow-left.png" />
     <Content Include="Assets\arrow-right.png" />
     <Content Include="Assets\BadgeLogo.scale-100.png" />
@@ -155,7 +156,7 @@
     <Content Include="SelectTheme\DarkBlue-700.png" />
     <Content Include="SelectTheme\Default-700.png" />
     <Content Include="SelectTheme\Fall-700.png" />
-    <Content Include="SelectTheme\Fir-700.png" />
+    <Content Include="SelectTheme\Violet-700.png" />
     <Content Include="SelectTheme\HotPink-700.png" />
     <Content Include="SelectTheme\MintGreen-700.png" />
     <Content Include="SelectTheme\Orange-700.png" />
