--- a/Calendar/Calendar.WindowsPhone/Calendar.WindowsPhone.csproj
+++ b/Calendar/Calendar.WindowsPhone/Calendar.WindowsPhone.csproj
@@ -133,7 +133,7 @@
     <Content Include="SelectTheme\DarkBlue-700.png" />
     <Content Include="SelectTheme\Default-700.png" />
     <Content Include="SelectTheme\Fall-700.png" />
-    <Content Include="SelectTheme\Fir-700.png" />
+    <Content Include="SelectTheme\Violet-700.png" />
     <Content Include="SelectTheme\HotPink-700.png" />
     <Content Include="SelectTheme\MintGreen-700.png" />
     <Content Include="SelectTheme\Orange-700.png" />
