--- a/Calendar/Calendar.Windows/Calendar.Windows.csproj
+++ b/Calendar/Calendar.Windows/Calendar.Windows.csproj
@@ -9,7 +9,7 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Calendar</RootNamespace>
     <AssemblyName>Calendar.Windows</AssemblyName>
-    <DefaultLanguage>uk-UA</DefaultLanguage>
+    <DefaultLanguage>ru</DefaultLanguage>
     <TargetPlatformVersion>8.1</TargetPlatformVersion>
     <MinimumVisualStudioVersion>12</MinimumVisualStudioVersion>
     <FileAlignment>512</FileAlignment>
