--- a/Calendar/Calendar.Windows/packages.config
+++ b/Calendar/Calendar.Windows/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AdDuplexWin81" version="9.0.0.11" targetFramework="win81" />
   <package id="XamlAnimatedGif" version="1.0.5" targetFramework="win81" />
 </packages>
