--- a/Calendar/Calendar.WindowsPhone/packages.config
+++ b/Calendar/Calendar.WindowsPhone/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="XamlAnimatedGif" version="1.0.5" targetFramework="wpa81" />
+  <package id="AdDuplexWinPhone81" version="9.0.0.11" targetFramework="wpa81" />
+  <package id="XamlAnimatedGif" version="1.1.3" targetFramework="wpa81" />
 </packages>
