ru-RU and uk-UA resources

--- a/Calendar/Calendar.WindowsPhone/Calendar.WindowsPhone.csproj
+++ b/Calendar/Calendar.WindowsPhone/Calendar.WindowsPhone.csproj
@@ -17,7 +17,7 @@
     <SynthesizeLinkMetadata>true</SynthesizeLinkMetadata>
     <AppxAutoIncrementPackageRevision>False</AppxAutoIncrementPackageRevision>
     <AppxBundlePlatforms>neutral</AppxBundlePlatforms>
-    <AppxBundle>Always</AppxBundle>
+    <AppxBundle>Auto</AppxBundle>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
   </PropertyGroup>
