--- a/Calendar/Calendar.Windows/packages.config
+++ b/Calendar/Calendar.Windows/packages.config
@@ -1,9 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AdDuplexWin81" version="9.0.0.12" targetFramework="win81" />
+  <package id="Facebook" version="7.0.6" targetFramework="win81" />
   <package id="Google.Apis" version="1.14.0" targetFramework="win81" />
   <package id="Google.Apis.Auth" version="1.14.0" targetFramework="win81" />
-  <package id="Google.Apis.Calendar.v3" version="1.14.0.544" targetFramework="win81" />
+  <package id="Google.Apis.Calendar.v3" version="1.14.0.558" targetFramework="win81" />
   <package id="Google.Apis.Core" version="1.14.0" targetFramework="win81" />
   <package id="Google.Apis.Oauth2.v2" version="1.14.0.540" targetFramework="win81" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="win81" />
