--- a/BackgroundUpdater/BackgroundUpdater.csproj
+++ b/BackgroundUpdater/BackgroundUpdater.csproj
@@ -43,9 +43,10 @@
     <TargetPlatform Include="Windows, Version=8.1" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ToastBackgroundTask.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources.cs" />
-    <Compile Include="Tasks.cs" />
+    <Compile Include="TileBackgroundTask.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
